# L-C_RecommendationEngine

./: .gitignore  README.md
client/: CMakeLists.txt  RequestType.h  client.cpp  client.h  clientmain.cpp  main.cpp
client/admin/: CMakeLists.txt
client/admin/inc/: admin.h
client/admin/src/: admin.cpp
client/authentication/: CMakeLists.txt
client/authentication/inc/: authentication.h
client/authentication/src/: authentication.cpp
client/chef/: CMakeLists.txt
client/chef/inc/: chef.h
client/chef/src/: chef.cpp
client/employee/: CMakeLists.txt
client/employee/inc/: employee.h
client/employee/src/: employee.cpp
client/serverConnection/: CMakeLists.txt
client/serverConnection/inc/: serverConnection.h
client/serverConnection/src/: serverConnection.cpp
client/utils/: CMakeLists.txt
client/utils/inc/: dataParser.h  menu.h  userInputHandler.h
client/utils/src/: dataParse.cpp  userInputHandler.cpp
server/: CMakeLists.txt
server/database/: CMakeLists.txt
server/database/inc/: IDatabaseController.h  databaseController.h
server/database/pub/: databaseInterface.h
server/database/src/: databaseController.cpp
server/recommendationEngine/: CMakeLists.txt
server/recommendationEngine/inc/: IRecommendationEngine.h  recommendationEngine.h  sentimentDictionary.h
server/recommendationEngine/pub/: IRecommendationEngine.h
server/recommendationEngine/src/: recommendationEngine.cpp
server/requestHandler/: CMakeLists.txt
server/requestHandler/inc/: IRequestHandler.h  requestHandler.h
server/requestHandler/src/: requestHandler.cpp
server/server/: CMakeLists.txt
server/server/inc/: server.h
server/server/src/: main.cpp  server.cpp
server/serverHandler/: CMakeLists.txt
server/serverHandler/inc/: serverHandler.h
server/serverHandler/src/: main.cpp  (+1 more)
server/utils/: CMakeLists.txt  menuUtils.h
(+8 files in other folders)
